[tool.poetry]
name = "yogendra_fizzbuzz"
version = "0.3.0"
description = "Simple Fizz Buzz Game"
authors = ["Yogendra Rampuria (Yogi) <yogendrarampuria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
test = 'scripts:test'
