[tool.poetry]
name = "yogendra_fizzbuzz"
version = "0.4.0"
description = "Simple Fizz Buzz Game"
authors = ["Yogendra Rampuria (Yogi) <yogendrarampuria@gmail.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.9"
license = "MIT"

keywords = ['fizzbuzz', 'gmae']

repository = "https://github.com/yogendra/pypi-yogendra_fizbuzz"
homepage = "https://github.com/yogendra/pypi-yogendra_fizbuzz"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
test = 'scripts:test'


[tool.poetry.urls]
"Issue Tracker" = "https://github.com/yogendra/pypi-yogendra_fizbuzz/issues"
